2000-08-11  Christopher James Lahey  <clahey@helixcode.com>

	* mail-format.c, mail-tools.h, message-list.c: Fixed a warning.

2000-08-11  Dan Winship  <danw@helixcode.com>

	* mail-display.c, mail-format.c: Redo this again. Get rid of
	struct mail_format_data and move most of that info into
	MailDisplay itself, and pass the MailDisplay around. Add a GData**
	to MailDisplay, and put the urls hash table into that. Also add
	the ability to redisplay the currently-displayed message (with the
	same GData**), and add a "show_pgp" datum to it that controls
	whether or not to decrypt PGP messages, and redo the PGP stuff
	(again) to take that into account. Now you don't get the annoying
	PGP password dialog box without any warning.

2000-08-11  Peter Williams  <peterw@helixcode.com>

	* mail-config-gui.c (service_acceptable): Make verify-service
	an asynchronous operation.

	* Makefile.am (noinst_PROGRAMS): Don't build test-thread
	while mail-threads.c is in flux.

	* mail-threads.c (mail_operation_queue): Make the error
	and query dialogs modal.

	* mail-local.c (update_progress): Don't use the
	temporarily-disabled mail_op_set_percentage().

2000-08-11  Chris Toshok  <toshok@helixcode.com>

	* mail-config.c (mail_config_get_default_news): use config->news
	instead of config->sources.

2000-08-11  Dan Winship  <danw@helixcode.com>

	* mail-format.c (destroy_part): Update this for CamelObject
	(try_inline_pgp): Deal with decrypting here rather than trying to
	pawn the data off to handle_multipart_encrypted, since it most
	likely won't be correct (won't have the proper MIME headers inside
	the encrypted part).
	(handle_multipart_encrypted): Add code from Nathan Thompson-Amato
	to re-MIME-parse the decrypted data after decrypting.

	* mail-crypto.c (mail_crypto_openpgp_{de,en}crypt): Get the
	password here rather than having it passed in. Remove some dead
	code.

	* session.c (mail_request_dialog): Allow this to work in either a
	sync or an async context.
